--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Set YML
       run: |
         mkdir -p src/main/resources
-        echo "${{ secrets.APPLICATION_YML }}" | base64 --decode > src/main/resources/application.yml
+        echo "${{ secrets.APPLICATION_SECRET_YML }}" | base64 --decode > src/main/resources/application.yml
         find src
 
     - name: Build with Gradle
